--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+    - name: Install package
+      run: |
+        sudo apt-get -y install btrfs-progs-dev gpgme-dev device-mapper-dev
 
     - name: Test
       run: make test
