--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,15 +17,13 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
-        
-    - name: Set up env
-      run: |
-        export PATH=$PATH:$(go env GOPATH)/bin
-        
+                
     - name: Install package
       run: |
         sudo apt-get -y install libbtrfs-dev libgpgme-dev libdevmapper-dev
-
     
     - name: Test
-      run: make test
+      run: | 
+        export PATH=$PATH:$(go env GOPATH)/bin
+        env
+        make test
