Create a netfilter interface so we can mock it

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Install package
       run: |
+        sudo apt-get -y update
         sudo apt-get -y install libbtrfs-dev libgpgme-dev libdevmapper-dev
 
     - name: Test
