--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,6 +30,21 @@ jobs:
     - name: Checking generated files are up to date
       run: git diff --quiet internal/ || (echo "There are not committed changes"; git diff internal/| tee; exit 1)
 
+  lint-code:
+    name: Lint code
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Install package
+        run: |
+          sudo apt-get -y update
+          sudo apt-get -y install libbtrfs-dev libgpgme-dev libdevmapper-dev
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v2.5.2
+
   security-Scanner:
     name: Security Scanner
     runs-on: ubuntu-latest
