RPM: using new COPR repo
Signed-off-by: Eloy Coto <eloy.coto@acalustra.com>

--- a/.github/workflows/rpm.yaml
+++ b/.github/workflows/rpm.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install API token for copr-cli
         env:
-          API_TOKEN_CONTENT: ${{ secrets.COPR_API_TOKEN }}
+          API_TOKEN_CONTENT: ${{ secrets.FLOTTA_COPR_API_TOKEN }}
         run: |
           mkdir -p "$HOME/.config"
           echo "$API_TOKEN_CONTENT" > "$HOME/.config/copr"
