--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
 jobs:
-  build:
+  rpm:
     name: Submit a build from Fedora container
     container: fedora:latest
     runs-on: ubuntu-latest
@@ -33,3 +33,20 @@ jobs:
       - name: Submit the build by uploading the source RPM
         run: |
           make rpm-copr
+
+  container:
+    runs-on: ubuntu-latest
+    needs: rpm
+    steps:
+      - name: Check out proper version of sources
+        uses: actions/checkout@v1
+
+      - name: Login to quay
+        env:
+          QUAY_TOKEN: ${{ secrets.QUAY_TOKEN }}
+        run: |
+          echo "$QUAY_TOKEN" | docker login quay.io --username project-flotta+github --password-stdin
+
+      - name: Build & push the container image to quay
+        run: |
+          make deploy-container-image
