RPM: Build flotta-agent-race package
To be able to test with race conditions enabled and be able to debug
that there is no race-conditions in the integration test at all.

Related-to: https://issues.redhat.com/browse/ECOPROJECT-473

Signed-off-by: Eloy Coto <eloy.coto@acalustra.com>

--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -7,7 +7,7 @@ RUN dnf copr enable project-flotta/flotta -y
 # Yum dependencies
 RUN dnf update -y \
   && dnf install -y openssl procps-ng dmidecode nc \
-  yggdrasil flotta-agent node_exporter
+  yggdrasil flotta-agent-race node_exporter
 
 # Modify podman configuration
 RUN sed -i s/netns=\"host\"/netns=\"private\"/g /etc/containers/containers.conf && \
