Install ansible package to execute tests
Signed-off-by: Gloria Ciavarrini <gciavarrini@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Install package
       run: |
         sudo apt-get -y update
-        sudo apt-get -y install libbtrfs-dev libgpgme-dev libdevmapper-dev
-
+        sudo apt-get -y install libbtrfs-dev libgpgme-dev libdevmapper-dev ansible
+    
     - name: Test
       run: |
         make test
