CI: increase lint timeout
Signed-off-by: Eloy Coto <eloy.coto@acalustra.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,6 +46,8 @@ jobs:
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v2.5.2
+        with:
+          args: --timeout=4m
 
   security-Scanner:
     name: Security Scanner
