--- a/.github/workflows/rpm.yaml
+++ b/.github/workflows/rpm.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Install tooling for source RPM build
         run: |
           dnf -y install @development-tools @rpm-development-tools
-          dnf -y install copr-cli make golang
+          dnf -y install copr-cli make golang btrfs-progs-devel device-mapper-devel
 
       - name: Check out proper version of sources
         uses: actions/checkout@v3
