CI: Fix Copr job
Due to the lack of jq on commit c61d754361f5c1442eac3e964e5bd8083e9c3870
the build failed and cannot upload the right container

Signed-off-by: Eloy Coto <eloy.coto@acalustra.com>

--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Install tooling for source RPM build
         run: |
           dnf -y install @development-tools @rpm-development-tools
-          dnf -y install copr-cli make
+          dnf -y install copr-cli make jq
 
       - name: Check out proper version of sources
         uses: actions/checkout@v3
