Fix: Run tmpfiles on flotta-agent files
Becuase now the tmpfiles are trying to use flotta user, but we cannot
use sysusers anymore it's failing on the first boot and the flotta user
cannot run podman socket.

Signed-off-by: Eloy Coto <eloy.coto@acalustra.com>

--- a/packaging/systemd/flotta-agent.service
+++ b/packaging/systemd/flotta-agent.service
@@ -9,6 +9,7 @@ Type=oneshot
 RemainAfterExit=yes
 ExecStart=bash -c "getent group flotta >/dev/null || groupadd flotta"
 ExecStart=bash -c "getent passwd flotta >/dev/null || useradd -g flotta -s /sbin/nologin -d /var/home/flotta flotta"
+ExecStartPost=systemd-tmpfiles --create --remove --boot --exclude-prefix=/dev
 TimeoutSec=90s
 
 [Install]
