--- a/tools/Dockerfile_test
+++ b/tools/Dockerfile_test
@@ -1,6 +1,7 @@
 FROM fedora:36
 
-RUN dnf install -y git make which go ansible btrfs-progs-devel device-mapper device-mapper-devel
+RUN dnf install -y git make which go ansible btrfs-progs-devel \
+  device-mapper device-mapper-devel e2fsprogs
 
 ARG GINKGO_VERS=v2.1.3
 RUN go install github.com/onsi/ginkgo/v2/ginkgo@${GINKGO_VERS}
