Fix: Require podman 4.2
Now device needs podman 4.2, so make explicit on the code.

At the moment there is no 4.2 container, so we need to use testing one.

Signed-off-by: Eloy Coto <eloy.coto@acalustra.com>

--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,4 +1,6 @@
-FROM quay.io/podman/stable:v4.1.0
+# FROM quay.io/podman/stable:v4.2.0
+# Hack until 4.2 is released
+FROM quay.io/podman/testing:ae7690c42379
 
 WORKDIR /project
 RUN dnf install -y 'dnf-command(copr)'
